add company info

--- a/tex/main.tex
+++ b/tex/main.tex
@@ -120,8 +120,32 @@
 
 \newpage
 \section{Smile}
-\subsection{The company}
+Smile is a French company specialized in the integration of open source
+solutions. Created in 1991, it has 15 agencies in 7 countries: France,
+Switzerland, Netherlands, Belgium, Luxembourg, Morocco and Ukraine. It offers
+consulting services in design, development and integration of open source
+solutions but also provides training sessions, technical support and hosting
+services. The main offers are grouped into the following categories:
+\begin{itemize}
+  \item Digital
+  \item Business Apps
+  \item Embedded \& IoT
+  \item Outsourcing
+\end{itemize}
+
 \subsection{Organizational structure}
+Smile is organized into autonomous entities called Business Units (BU), some
+offering products and services which target a specific market segment and
+some others that work internally for the company. Some examples of BUs are:
+Embedded and Connected Systems (ECS), Digital, Sales Outsourcing, Hosting,
+E-commerce and Recruiting, among others.
+
+\subsection{Open Source School}
+In February 2016, Smile launched the Open Source School (OSS) in partnership
+with EPSI, an engineering school. This is the first higher education school
+dedicated to open source technologies which offers a 3-year program (BAC+5)
+to train professionals who will design, build and manage large open source
+projects.
 
 \newpage
 \section{Buildroot}
