--- a/presentations/smile/presentation.tex
+++ b/presentations/smile/presentation.tex
@@ -63,6 +63,9 @@ Smile \\~\\
 \frametitle{Smile - Open Source Solutions}
 \begin{columns}[c]
 \column{.5\textwidth}
+\begin{figure}
+\includegraphics[width=0.6\linewidth]{img/smile.png}
+\end{figure}
 \begin{itemize}
   \item 1st integrator and European expert in open source solutions
   \item Some numbers:
@@ -551,6 +554,22 @@ Total & Skip & Pass & Fail & Crash \\
     \item Add OpenCL support for already existing packages
     \item Add new packages that depend on LLVM
   \end{itemize}
+\end{itemize}
+\end{frame}
+
+\begin{frame}
+\frametitle{Conclusions and acquired competencies}
+\begin{itemize}
+  \item Learned how to contribute to open source projects \checkmark
+  \begin{itemize}
+    \item Rules
+    \item Procedures
+    \item Patch reviews, tests
+  \end{itemize}
+  \item Cross-compilation toolchains \checkmark
+  \item Build systems \checkmark
+  \item Linux graphics stack \checkmark
+  \item OpenCL \checkmark
 \end{itemize}
 \end{frame}
 
