--- a/presentations/smile/presentation.tex
+++ b/presentations/smile/presentation.tex
@@ -26,7 +26,6 @@
 \usepackage{graphicx}
 \usepackage{listings}
 \usepackage{dirtytalk}
-%\usepackage{tikzsymbols}
 
 \graphicspath{{img/}}
 
@@ -35,14 +34,14 @@
 \title[]{LLVM/Clang integration to Buildroot}
 
 \author{Valentin Korenblit}
-\iffalse
+
 \institute[Smile]
 {
-Smile \\~\\
+ESIEE Paris \\~\\
 \medskip
 \textit{valentin.korenblit@smile.fr}
 }
-\fi
+
 \date{\today}
 
 \begin{document}
@@ -144,6 +143,8 @@ Smile \\~\\
   \item IR Code example:
 \end{itemize}
 
+\begin{columns}[c]
+\column{.5\textwidth}
 \begin{lstlisting}
       define i32 @main() #0 {
       entry:
@@ -157,6 +158,12 @@ Smile \\~\\
         ret i32 0
       }
 \end{lstlisting}
+\column{.5\textwidth}
+\begin{figure}
+\includegraphics[width=0.8\linewidth]{img/ll.png}
+\end{figure}
+\end{columns}
+
 \end{frame}
 
 \begin{frame}
@@ -258,6 +265,8 @@ Smile \\~\\
   \end{itemize}
   \item OpenSWR for scientific visualization (AVX, AVX2)
   \item Most OpenCL implementations rely on LLVM
+  \item Patchs sent to the mailing list since \textbf{2015}, many people interested in
+  the topic
 \end{itemize}
 \end{frame}
 
@@ -365,9 +374,7 @@ Smile \\~\\
   \begin{itemize}
     \item It's a compiled program. Normally ''config'' programs are scripts.
     \item llvm-config compiled for the host must be installed to the target's
-    sysroot.
-    \item Some output depends on its location and some other is contained in the
-    binary %\Sey
+    sysroot. (e.g host=x86 \& target=ARM)
   \end{itemize}
   \item \textbf{Solution:} do a full installation of LLVM for the host using the
   same\footnote{Tools are not built for the target} configuration options as for
@@ -440,7 +447,7 @@ Smile \\~\\
 \textbf{Project} & \textbf{Version} & \textbf{Hardware} \\
 \hline
 Clover & 1.1 & AMD\\
-Pocl & 1.2 & CPU, NVIDIA\footnote{Needs propietary drivers}, AMD\footnote{HSA
+Pocl & 1.2 & CPU, NVIDIA\footnote{Needs proprietary drivers}, AMD\footnote{HSA
 compatible hardware}, TCE/TTA\\
 Beignet & 2.0 & Intel\\
 ROCm OpenCL & 1.2 & AMD\footnote{ROCm compatible hardware}\\
@@ -456,7 +463,7 @@ ROCm OpenCL & 1.2 & AMD\footnote{ROCm compatible hardware}\\
 \begin{frame}
 \frametitle{Clover}
 \begin{figure}
-\includegraphics[width=0.7\linewidth]{img/clover.png}
+\includegraphics[width=0.7\linewidth]{img/clover_numbered.png}
 \end{figure}
 \end{frame}
 
@@ -560,10 +567,15 @@ Total & Skip & Pass & Fail & Crash \\
     \item libclc package
     \item OpenCL support for AMD GPUs
   \end{itemize}
+  \item Work done by other contributors on top of LLVM
+  \begin{itemize}
+    \item RadeonSI Gallium Driver for Mesa 3D
+    \item Chromium browser (work in progress)
+  \end{itemize}
   \item TODO
   \begin{itemize}
     \item Add OpenCL support for already existing packages
-    \item Add new packages that depend on LLVM
+    \item Add new packages which depend on LLVM
     \item \textbf{Create an Clang-based toolchain}
   \end{itemize}
 \end{itemize}
@@ -580,6 +592,7 @@ Total & Skip & Pass & Fail & Crash \\
     \item Rules
     \item Procedures
     \item Patch reviews, tests
+    \item Give support to other contributors
   \end{itemize}
   \item Cross-compilation toolchains \checkmark
   \item Build systems \checkmark
